rebuild config module